# cmake-vcpkg-template

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: lint.yml  test.yml
docker/: debug.Dockerfile  debug.docker-compose.yml  release.Dockerfile  release.docker-compose.yml
src/: CMakeLists.txt  main.cpp
src/sublibrary/: CMakeLists.txt  sublib_component.cpp  sublib_component.h  sublib_component_test.cpp
